--- a/index.html
+++ b/index.html
@@ -118,9 +118,12 @@
             </div>
         </section>
         <section class="flower">
-            <img src="assets/flower-store.png" alt="" class="flower-store-image">
+            <div class="flower-image-wrapper">
+                <img src="assets/flower-store.png" alt="" class="flower-store-image">
+                <img src="assets/trusted-badge.png" alt="" class="badge">
+            </div>
             <div class="flower-details">
-                <p class="flower-title noto-serif-normal">Flower & Plants <br> Lover</p>
+                <p class="flower-title bold noto-serif-normal">Flower & Plants <br> Lover</p>
                 <ul class="flower-list inter-normal">
                     <li class="flower-description color01">Indulge your senses with the beauty and fragrance of our
                         fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
