deal section created

--- a/index.html
+++ b/index.html
@@ -134,6 +134,11 @@
                 </ul>
             </div>
         </section>
+
+        <section class="deals">
+            <p class="deal-title bold noto-serif-normal"><span class="color03">Latest</span> Deals</p>
+            <p class="deal-description color01 inter-normal">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+        </section>
     </main>
 </body>
 
