Down-Banner added

--- a/index.html
+++ b/index.html
@@ -137,8 +137,47 @@
 
         <section class="deals">
             <p class="deal-title bold noto-serif-normal"><span class="color03">Latest</span> Deals</p>
-            <p class="deal-description color01 inter-normal">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            <p class="deal-description color01 inter-normal">Indulge your senses with the beauty and fragrance of our
+                fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
         </section>
+
+        <!-- PROBLEM -->
+        <section class="plant-images">
+
+            <div class="leftside-images">
+                <div class="bloom-plant">
+                    <img src="assets/deal-bloom.png" alt="">
+                    <p class="bloom-plant-name button-01">60% Off | Bloom Plant</p>
+                    <p class="bloom-button button-01"><a href="">Shop Now</a></p>
+                </div>
+                <div class="ana-plant">
+                    <img src="assets/deal-ana.png" alt="">
+                    <p class="ana-plant-name">30% Off | Ana Plant</p>
+                    <p class="ana-button"><a href="">Shop Now</a></p>
+                </div>
+            </div>
+
+            <div class="rightside-image">
+                <div class="zabo-plant">
+                    <img src="assets/deal-zabo.png" alt="">
+                    <p class="zabo-plant-name">25% Off | Zabo Plant</p>
+                    <p class="zabo-button"><a href="">Shop Now</a></p>
+                </div>
+            </div>
+        </section>
+        <section class="down-banner">
+            <div class="down-banner-img-container">
+                <img src="assets/news-letter-bg.png" alt="" class="down-banner-img">
+                <div class="down-banner-details">
+                    <p class="down-banner-title bold noto-serif-normal">Join the colorful Bunch</p>
+                    <div class="down-banner-search inter-normal">
+                        <input type="email" placeholder="Write email" class="email color01">
+                        <button class="down-banner-button">Subscribe</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 </body>
 
