footer section added

--- a/index.html
+++ b/index.html
@@ -142,26 +142,35 @@
         </section>
 
         <!-- PROBLEM -->
-        <section class="plant-images">
+        <section class="plant-images inter-normal">
 
             <div class="leftside-images">
                 <div class="bloom-plant">
                     <img src="assets/deal-bloom.png" alt="">
-                    <p class="bloom-plant-name button-01">60% Off | Bloom Plant</p>
-                    <p class="bloom-button button-01"><a href="">Shop Now</a></p>
+                    <div class="bloom-wrapper">
+                        <p class="bloom-plant-name bold">60% Off | Bloom Plant</p>
+                        <p class="bloom-button Semi-bold">Shop Now</p>
+                    </div>
                 </div>
                 <div class="ana-plant">
+
                     <img src="assets/deal-ana.png" alt="">
-                    <p class="ana-plant-name">30% Off | Ana Plant</p>
-                    <p class="ana-button"><a href="">Shop Now</a></p>
+                    <div class="ana-wrapper">
+
+                        <p class="ana-plant-name bold">30% Off | Ana Plant</p>
+                        <p class="ana-button Semi-bold">Shop Now</p>
+                    </div>
                 </div>
             </div>
 
             <div class="rightside-image">
                 <div class="zabo-plant">
                     <img src="assets/deal-zabo.png" alt="">
-                    <p class="zabo-plant-name">25% Off | Zabo Plant</p>
-                    <p class="zabo-button"><a href="">Shop Now</a></p>
+                    <div class="zabo-wrapper">
+                        <p class="zabo-plant-name bold">25% Off | Zabo Plant</p>
+                        <p class="zabo-button Semi-bold">Shop Now</p>
+                    </div>
+
                 </div>
             </div>
         </section>
@@ -179,6 +188,44 @@
         </section>
 
     </main>
+
+    <footer>
+        <div class="footer-main inter-normal">
+            <div class="footer-secondary">
+                <div class="footer-details">
+                    <img src="assets/logo.png" alt="" class="footer-logo">
+                    <p class="footer-description color01">Indulge your senses with the beauty and fragrance of our fresh
+                        flower shop. </p>
+                </div>
+
+                <div class="footer-list01 color01">
+                    <ul>
+                        <li>Home</li>
+                        <li>About Us</li>
+                        <li>Blog</li>
+                        <li>FAQ</li>
+                        <li>Contact Us</li>
+                    </ul>
+                </div>
+                <div class="footer-list02 color01">
+                    <ul>
+                        <li>Features</li>
+                        <li>Pricing</li>
+                        <li>Privacy Policy</li>
+                        <li>Terms of Service</li>
+                        <li>Help Center</li>
+                    </ul>
+                </div>
+
+                <div class="footer-platform-logos">
+                    <img src="assets/icon-linkedin.png" alt="">
+                    <img src="assets/icon-twitter.png" alt="">
+                    <img src="assets/icon-facebook.png" alt="">
+                    <img src="assets/icon-youtube.png" alt="">
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
