--- a/index.html
+++ b/index.html
@@ -146,34 +146,42 @@
 
             <div class="leftside-images">
                 <div class="bloom-plant">
-                    <img src="assets/deal-bloom.png" alt="">
-                    <div class="bloom-wrapper">
-                        <p class="bloom-plant-name bold">60% Off | Bloom Plant</p>
-                        <p class="bloom-button Semi-bold">Shop Now</p>
+                    <div class="overlay-container">
+                        <img src="assets/deal-bloom.png" alt="">
+                        <div class="black-overlay"></div>
+                        <div class="bloom-wrapper">
+                            <p class="bloom-plant-name bold">60% Off | Bloom Plant</p>
+                            <p class="bloom-button Semi-bold">Shop Now</p>
+                        </div>
                     </div>
                 </div>
                 <div class="ana-plant">
-
-                    <img src="assets/deal-ana.png" alt="">
-                    <div class="ana-wrapper">
-
-                        <p class="ana-plant-name bold">30% Off | Ana Plant</p>
-                        <p class="ana-button Semi-bold">Shop Now</p>
+                    <div class="overlay-container">
+                        <img src="assets/deal-ana.png" alt="">
+                        <div class="black-overlay"></div>
+                        <div class="ana-wrapper">
+                            <p class="ana-plant-name bold">30% Off | Ana Plant</p>
+                            <p class="ana-button Semi-bold">Shop Now</p>
+                        </div>
                     </div>
                 </div>
             </div>
 
             <div class="rightside-image">
                 <div class="zabo-plant">
+                    <div class="overlay-container"></div>
                     <img src="assets/deal-zabo.png" alt="">
+                    <div class="black-overlay"></div>
+
                     <div class="zabo-wrapper">
                         <p class="zabo-plant-name bold">25% Off | Zabo Plant</p>
                         <p class="zabo-button Semi-bold">Shop Now</p>
                     </div>
-
                 </div>
             </div>
+            </div>
         </section>
+
         <section class="down-banner">
             <div class="down-banner-img-container">
                 <img src="assets/news-letter-bg.png" alt="" class="down-banner-img">
