--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             <img src="assets/logo.png" alt="" class="nav-logo">
             <div class="nav-content">
                 <ul class="nav-list inter-normal">
-                    <li><a href="" class="bold color02">Home</a></li>
-                    <li><a href="" class="color01">Shop</a></li>
-                    <li><a href="" class="color01">About us</a></li>
-                    <li><a href="" class="color02"><i class="fa-solid fa-cart-shopping"></i>Cart($56)</a></li>
+                    <li><a href="" class="bold color02 hide ">Home</a></li>
+                    <li><a href="" class="color01 hide">Shop</a></li>
+                    <li><a href="" class="color01 hide">About us</a></li>
+                    <li><a href="" class="color02 not-hidder"><i class="fa-solid fa-cart-shopping"></i>Cart($56)</a></li>
                 </ul>
             </div>
         </nav>
@@ -120,7 +120,7 @@
         <section class="flower">
             <div class="flower-image-wrapper">
                 <img src="assets/flower-store.png" alt="" class="flower-store-image">
-                <img src="assets/trusted-badge.png" alt="" class="badge">
+                <img src="assets/trusted-badge.png" alt="" class="badge hide">
             </div>
             <div class="flower-details">
                 <p class="flower-title bold noto-serif-normal">Flower & Plants <br> Lover</p>
@@ -141,13 +141,12 @@
                 fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
         </section>
 
-        <!-- PROBLEM -->
         <section class="plant-images inter-normal">
 
             <div class="leftside-images">
                 <div class="bloom-plant">
                     <div class="overlay-container">
-                        <img src="assets/deal-bloom.png" alt="">
+                        <img src="assets/deal-bloom.png" alt="" class="plant-images-media">
                         <div class="black-overlay"></div>
                         <div class="bloom-wrapper">
                             <p class="bloom-plant-name bold">60% Off | Bloom Plant</p>
@@ -157,7 +156,7 @@
                 </div>
                 <div class="ana-plant">
                     <div class="overlay-container">
-                        <img src="assets/deal-ana.png" alt="">
+                        <img src="assets/deal-ana.png" alt="" class="plant-images-media">
                         <div class="black-overlay"></div>
                         <div class="ana-wrapper">
                             <p class="ana-plant-name bold">30% Off | Ana Plant</p>
@@ -170,7 +169,7 @@
             <div class="rightside-image">
                 <div class="zabo-plant">
                     <div class="overlay-container"></div>
-                    <img src="assets/deal-zabo.png" alt="">
+                    <img src="assets/deal-zabo.png" alt="" class="plant-images-media">
                     <div class="black-overlay"></div>
 
                     <div class="zabo-wrapper">
