Final check done

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                     <li><a href="" class="bold color02 hide ">Home</a></li>
                     <li><a href="" class="color01 hide">Shop</a></li>
                     <li><a href="" class="color01 hide">About us</a></li>
-                    <li><a href="" class="color02 not-hidder"><i class="fa-solid fa-cart-shopping"></i>Cart($56)</a></li>
+                    <li><a href="" class="color02 not-hidder"><i class="fa-solid fa-cart-shopping"></i>Cart($56)</a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -53,7 +54,7 @@
                 <img src="assets/hero-flower.png" alt="">
             </div>
         </div>
-    </header>
+    </header> 
 
     <main>
         <section class="plant-section">
